--- a/Triangulation Delaunay .ipynb
+++ b/Triangulation Delaunay .ipynb
@@ -87,6 +87,14 @@
     "\n",
     "$\\triangleleft$\n",
     "\n",
+    "Таким образом мы можем предложить примерный алгоритм построения триангуляции Делоне:\n",
+    "\n",
+    "1. Перенести все точки на параболоид \n",
+    "2. Построить выпуклую оболочку\n",
+    "3. Перенести все точки и построенные ребра на плоскость\n",
+    "\n",
+    "\n",
+    "\n",
     "### Теорема о существовании триангуляции Делоне\n",
     "\n",
     "> Триангуляция Делоне существует\n",
@@ -101,27 +109,32 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Таким образом у нас есть примерный алгоритм построения триангуляции Делоне:\n",
-    "\n",
-    "1. Перенести все точки на параболоид \n",
-    "2. Построить выпуклую оболочку\n",
-    "3. Перенести все точки и построенные ребра на плоскость\n",
-    "\n",
-    "Код: TODO (Построить выпуклую оболочку любым методом, например QuickHull)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"854\" height=\"480\" src=\"https://www.youtube.com/embed/xYzULMoyaQk\" frameborder=\"0\" gesture=\"media\" allowfullscreen></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import numpy as np"
+    "# Код, для запуска примера на видео\n",
+    "\n",
+    "from IPython.display import HTML\n",
+    "\n",
+    "HTML('<iframe width=\"854\" height=\"480\" src=\"https://www.youtube.com/embed/xYzULMoyaQk\" frameborder=\"0\" gesture=\"media\" allowfullscreen></iframe>')"
    ]
   },
   {
