--- a/Triangulation Delaunay .ipynb
+++ b/Triangulation Delaunay .ipynb
@@ -14,11 +14,11 @@
    },
    "source": [
     "Для начала введем основные понятия:\n",
-    "> **Триангуляция** заданного набора точек $S$ - это такое разбиение выпуклой оболочки этих точек на треугольники, что множество вершин треугольников совпадает с $S$, любые два треугольника не пересекаются и любая точка из выпуклой оболочки принадлежит какому-нибудь треугольнику.\n",
+    "> **Триангуляция** заданного набора точек $S$ $-$ это такое разбиение выпуклой оболочки этих точек на треугольники, что множество вершин треугольников совпадает с $S$, любые два треугольника не пересекаются и любая точка из выпуклой оболочки принадлежит какому-нибудь треугольнику.\n",
     "\n",
     "> **Глобальный критерий Делоне**: для любого треугольника нет точек из $S$, которые бы лежали внутри описанной около него окружности.\n",
     "\n",
-    "> **Триангуляция Делоне** - триангуляция, удовлетворяющая глобальному критерию Делоне\n",
+    "> **Триангуляция Делоне** $-$ триангуляция, удовлетворяющая глобальному критерию Делоне\n",
     "\n",
     "> **Локальный критерий Делоне для ребра**: для пары треугольников, которым принадлежит это ребро, выполняется критерий Делоне (то есть вершина, противолежащая ребру в одном треугольнике, не лежит в окружности, описанной вокруг другого, и наоборот)."
    ]
@@ -45,11 +45,11 @@
     "$\\triangleright$\n",
     "\n",
     "<div style=\"padding-left:27px\">\n",
-    "Докажем в обратную сторону. Пусть для некоторого треугольника выполнен локальный, но не выполнен глобальный критерий. Т.е. существует точка $E$ такая, что лежит внутри описанной окружности и не имеет рёбер с вершинами треугольника. Зафиксируем эту точку и из всех таких треугольников рассмотрим тот, у которого $\\angle BEC$ максимален, если $BC$ - ближайшая к точке $E$ сторона. Пусть с таким $\\Delta ABC$ соседствует $\\Delta BCD$.\n",
+    "Докажем в обратную сторону. Пусть для некоторого треугольника выполнен локальный, но не выполнен глобальный критерий. Т.е. существует точка $E$ такая, что лежит внутри описанной окружности и не имеет рёбер с вершинами треугольника. Зафиксируем эту точку и из всех таких треугольников рассмотрим тот, у которого $\\angle BEC$ максимален, если $BC$ $-$ ближайшая к точке $E$ сторона. Пусть с таким $\\Delta ABC$ соседствует $\\Delta BCD$.\n",
     "</div>\n",
     "<img src=\"img/Bad_triangle.png\" style=\"float: right; margin: 10px\">\n",
     "<div style=\"padding-left:27px\">\n",
-    "Точка $E$ не может лежать внутри $\\Delta BCD$, так как в этом случае имелись бы рёбра $EB$ и $EC$, и нарушался бы локальный критерий. Значит, она снаружи. Не уменьшая общности, будем считать, что $CD$ - ближайшая к $E$ сторона $\\Delta BCD$. Тогда выполнено, что $\\angle BAC + \\angle BEC > 180°, \\angle BAC + \\angle BDC < 180°$. Если т.$E$ лежит вне окружности, описанной около $\\Delta BCD$, то $\\angle BEC < \\angle BDC$, что противоречит неравенствам выше. Значит, для $\\Delta BCD$ также нарушается глобальный критерий. Из вышесказанного следует, что $\\angle CED > \\angle BEC$, где $CD$ - ближайшая к $E$ сторона. \n",
+    "Точка $E$ не может лежать внутри $\\Delta BCD$, так как в этом случае имелись бы рёбра $EB$ и $EC$, и нарушался бы локальный критерий. Значит, она снаружи. Не уменьшая общности, будем считать, что $CD$ $-$ ближайшая к $E$ сторона $\\Delta BCD$. Тогда выполнено, что $\\angle BAC + \\angle BEC > 180°, \\angle BAC + \\angle BDC < 180°$. Если т.$E$ лежит вне окружности, описанной около $\\Delta BCD$, то $\\angle BEC < \\angle BDC$, что противоречит неравенствам выше. Значит, для $\\Delta BCD$ также нарушается глобальный критерий. Из вышесказанного следует, что $\\angle CED > \\angle BEC$, где $CD$ $-$ ближайшая к $E$ сторона. \n",
     "</div>\n",
     "<div style=\"padding-left:27px\">\n",
     "Очевидно, что угол $BED$ больше, чем угол $BEC$. При этом точка $E$ лежит в окружности, описанной вокруг $BDC$. Значит, при выборе треугольника нужно было взять не $ABC$, а $BDC$. Противоречие.\n",
@@ -73,7 +73,7 @@
     "$\\triangleright$\n",
     "\n",
     "<div style=\"padding-left:27px\">\n",
-    "Любая окружность в $R^2$ описывается уравнением $(x-a)^2+(y-b)^2=r^2$, где $(a, b)$ - центр окружности, $r$ - её радиус. \n",
+    "Любая окружность в $R^2$ описывается уравнением $(x-a)^2+(y-b)^2=r^2$, где $(a, b)$ $-$ центр окружности, $r$ $-$ её радиус. \n",
     "Раскрываем скобки: $x^2-2ax+a^2+y^2-2by+b^2-r^2=0$.\n",
     "Подставляем в уравнение параболоида $(x^2+y^2=z)$: $(-2a)x+(-2b)y+(-1)z+(a^2+b^2-r^2)=0$.\n",
     "Получившееся уравнение является уравнением плоскости: $Ax+By+Cz+D=0$.\n",
@@ -97,7 +97,7 @@
     "\n",
     "### Теорема о существовании триангуляции Делоне\n",
     "\n",
-    "> Триангуляция Делоне существует\n",
+    "> Триангуляция Делоне существует для любого множетсва точек\n",
     "\n",
     "<img src=\"img/parabol.png\" width=\"300px\" height=\"400px\" style=\"float: right; margin: 10px\">\n",
     "\n",
@@ -145,7 +145,7 @@
     "\n",
     "Для начала определим операцию **флип** (flip):\n",
     "\n",
-    "> **Флип (flip)** - это замена одной диагонали на другую в четырёхугольнике, образованном смежными треугольниками.\n",
+    "> **Флип (flip)** $-$ это замена одной диагонали на другую в четырёхугольнике, образованном смежными треугольниками.\n",
     "\n",
     "<center><img src=\"img/flipm.gif\"></center> \n",
     "\n",
