--- a/Triangulation Delaunay .ipynb
+++ b/Triangulation Delaunay .ipynb
@@ -9,11 +9,25 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Содержание\n",
+    "\n",
+    "- [Основные определения](#def)\n",
+    "- [Эквивалентность критерия Долоне для треугольников критерию для ребер](#equal)\n",
+    "- [Существование триангуляции Делоне и её построение](#theorem)\n",
+    "- [Сведение любой триангуляции к триангуляции Делоне](#spl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
+    "<a id=\"def\"></a>\n",
     "Для начала введем основные понятия:\n",
+    "\n",
     "> **Триангуляция** заданного набора точек $S$ $-$ это такое разбиение выпуклой оболочки этих точек на треугольники, что множество вершин треугольников совпадает с $S$, любые два треугольника не пересекаются и любая точка из выпуклой оболочки принадлежит какому-нибудь треугольнику.\n",
     "\n",
     "> **Глобальный критерий Делоне**: для любого треугольника нет точек из $S$, которые бы лежали внутри описанной около него окружности.\n",
@@ -37,6 +51,8 @@
    "metadata": {},
    "source": [
     "Итак, докажем равносильность данных критериев:\n",
+    "\n",
+    "<a id=\"equal\"></a>\n",
     "\n",
     "### Лемма 1 (эквивалентность критерия Долоне для треугольников критерию для ребер)\n",
     "\n",
@@ -62,6 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"theorem\"></a>\n",
     "## Существование триангуляции Делоне и её построение\n",
     "\n",
     "Далее необходимо показать существование триангуляции Делоне для произвольного набора точек. Для этого воспользуемся следующим методом. Поднимем все наши точки в просторанство большей размерности, преобразовав точки по такому закону: $(x, y) \\to (x, y, x^2+y^2)$. Тем самым, мы спроецируем наши точки на параболоид $x^2 + y^2 = z$. Далее построим выпуклую оболочку полученных точек. Грани выпуклой оболочки будут соответствовать треугольникам в нашей триангуляции с некоторыми незначительными поправками.\n",
@@ -97,7 +114,7 @@
     "\n",
     "### Теорема о существовании триангуляции Делоне\n",
     "\n",
-    "> Триангуляция Делоне существует для любого множетсва точек\n",
+    "> Триангуляция Делоне существует для любого множества точек\n",
     "\n",
     "<img src=\"img/parabol.png\" width=\"300px\" height=\"400px\" style=\"float: right; margin: 10px\">\n",
     "\n",
@@ -110,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -124,14 +141,13 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Код, для запуска примера на видео\n",
-    "\n",
+    "#код для запуска \n",
     "from IPython.display import HTML\n",
     "\n",
     "HTML('<iframe width=\"854\" height=\"480\" src=\"https://www.youtube.com/embed/xYzULMoyaQk\" frameborder=\"0\" gesture=\"media\" allowfullscreen></iframe>')"
@@ -141,6 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"spl\"></a>\n",
     "## Сведение любой триангуляции к триангуляции Делоне\n",
     "\n",
     "Для начала определим операцию **флип** (flip):\n",
@@ -166,13 +183,7 @@
     "\n",
     "$\\triangleleft$\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
     "### Лемма 4 (о сведении флипами)\n",
     "\n",
     "> Любая триангуляция сводится к триангуляции Делоне за конечное число флипов\n",
