--- a/Triangulation Delaunay .ipynb
+++ b/Triangulation Delaunay .ipynb
@@ -14,7 +14,7 @@
     "## Содержание\n",
     "\n",
     "- [Основные определения](#def)\n",
-    "- [Эквивалентность критерия Долоне для треугольников критерию для ребер](#equal)\n",
+    "- [Эквивалентность критерия Делоне для треугольников критерию для ребер](#equal)\n",
     "- [Существование триангуляции Делоне и её построение](#theorem)\n",
     "- [Сведение любой триангуляции к триангуляции Делоне](#spl)"
    ]
@@ -54,7 +54,7 @@
     "\n",
     "<a id=\"equal\"></a>\n",
     "\n",
-    "### Лемма 1 (эквивалентность критерия Долоне для треугольников критерию для ребер)\n",
+    "### Лемма 1 (эквивалентность критерия Делоне для треугольников критерию для ребер)\n",
     "\n",
     "> Если для всех рёбер выполняется локальный критерий Делоне, то выполняется и глобальный критерий Делоне.\n",
     "\n",
@@ -191,7 +191,7 @@
     "$\\triangleright$\n",
     "\n",
     "<div style=\"padding-left:27px\" >\n",
-    "Рассмотрим все рёбра исходной триангуляции. Их конечное число. Флипнем все плохие рёбра. По лемме 5 все получившиеся рёбра будут хорошими. В итоге все ребра нашей триангуляции будут хорошими. По эквивалентности критериев Делоне для получившейся триангуляции будет выполняться глобальный критерий Делоне, что является определением триангуляции Делоне.\n",
+    "Рассмотрим все рёбра исходной триангуляции. Их конечное число. Флипнем все плохие рёбра. По лемме 3 все получившиеся рёбра будут хорошими. В итоге все ребра нашей триангуляции будут хорошими. По эквивалентности критериев Делоне для получившейся триангуляции будет выполняться глобальный критерий Делоне, что является определением триангуляции Делоне.\n",
     "</div>\n",
     "\n",
     "$\\triangleleft$"
