--- a/Triangulation Delaunay .ipynb
+++ b/Triangulation Delaunay .ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Итак, докажем равносильность данных критериев:\n",
+    "Докажем равносильность данных критериев:\n",
     "\n",
     "<a id=\"equal\"></a>\n",
     "\n",
@@ -61,11 +61,12 @@
     "$\\triangleright$\n",
     "\n",
     "<div style=\"padding-left:27px\">\n",
+    "В одну строну очевидно.<br>\n",
     "Докажем в обратную сторону. Пусть для некоторого треугольника выполнен локальный, но не выполнен глобальный критерий. Т.е. существует точка $E$ такая, что лежит внутри описанной окружности и не имеет рёбер с вершинами треугольника. Зафиксируем эту точку и из всех таких треугольников рассмотрим тот, у которого $\\angle BEC$ максимален, если $BC$ $-$ ближайшая к точке $E$ сторона. Пусть с таким $\\Delta ABC$ соседствует $\\Delta BCD$.\n",
     "</div>\n",
     "<img src=\"img/Bad_triangle.png\" style=\"float: right; margin: 10px\">\n",
     "<div style=\"padding-left:27px\">\n",
-    "Точка $E$ не может лежать внутри $\\Delta BCD$, так как в этом случае имелись бы рёбра $EB$ и $EC$, и нарушался бы локальный критерий. Значит, она снаружи. Не уменьшая общности, будем считать, что $CD$ $-$ ближайшая к $E$ сторона $\\Delta BCD$. Тогда выполнено, что $\\angle BAC + \\angle BEC > 180°, \\angle BAC + \\angle BDC < 180°$. Если т.$E$ лежит вне окружности, описанной около $\\Delta BCD$, то $\\angle BEC < \\angle BDC$, что противоречит неравенствам выше. Значит, для $\\Delta BCD$ также нарушается глобальный критерий. Из вышесказанного следует, что $\\angle CED > \\angle BEC$, где $CD$ $-$ ближайшая к $E$ сторона. \n",
+    "Точка $E$ не может лежать внутри $\\Delta BCD$, так как в этом случае имелись бы рёбра $EB$ и $EC$, и нарушался бы локальный критерий. Значит, она снаружи. Не уменьшая общности, будем считать, что $BD$ $-$ ближайшая к $E$ сторона $\\Delta BCD$. Тогда выполнено, что $\\angle BAC + \\angle BEC > 180°, \\angle BAC + \\angle BDC < 180°$. Если т.$E$ лежит вне окружности, описанной около $\\Delta BCD$, то $\\angle BEC < \\angle BDC$, что противоречит неравенствам выше. Значит, для $\\Delta BCD$ также нарушается глобальный критерий. Из вышесказанного следует, что $\\angle BED > \\angle BEC$, где $BD$ $-$ ближайшая к $E$ сторона. \n",
     "</div>\n",
     "<div style=\"padding-left:27px\">\n",
     "Очевидно, что угол $BED$ больше, чем угол $BEC$. При этом точка $E$ лежит в окружности, описанной вокруг $BDC$. Значит, при выборе треугольника нужно было взять не $ABC$, а $BDC$. Противоречие.\n",
@@ -104,6 +105,7 @@
     "\n",
     "$\\triangleleft$\n",
     "\n",
+    "\n",
     "Таким образом мы можем предложить примерный алгоритм построения триангуляции Делоне:\n",
     "\n",
     "1. Перенести все точки на параболоид \n",
@@ -135,7 +137,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe width=\"854\" height=\"480\" src=\"https://www.youtube.com/embed/xYzULMoyaQk\" frameborder=\"0\" gesture=\"media\" allowfullscreen></iframe>"
+       "<iframe width=\"600\" height=\"310\" src=\"https://www.youtube.com/embed/xYzULMoyaQk\" frameborder=\"0\" gesture=\"media\" allowfullscreen></iframe>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -150,7 +152,7 @@
     "#код для запуска \n",
     "from IPython.display import HTML\n",
     "\n",
-    "HTML('<iframe width=\"854\" height=\"480\" src=\"https://www.youtube.com/embed/xYzULMoyaQk\" frameborder=\"0\" gesture=\"media\" allowfullscreen></iframe>')"
+    "HTML('<iframe width=\"600\" height=\"310\" src=\"https://www.youtube.com/embed/xYzULMoyaQk\" frameborder=\"0\" gesture=\"media\" allowfullscreen></iframe>')"
    ]
   },
   {
@@ -167,8 +169,13 @@
     "<center><img src=\"img/flipm.gif\"></center> \n",
     "\n",
     "Будем называть ребро **хорошим**, если для него выполнен локальный критерий Делоне, и **плохим** в обратном случае.\n",
-    "Необходимо показать, что любая триангуляция сводится к триангуляции Делоне за конечное число флипов. Для этого докажем несколько лемм:\n",
-    "\n",
+    "Необходимо показать, что любая триангуляция сводится к триангуляции Делоне за конечное число флипов. Для этого докажем несколько лемм:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Лемма 3 (о хорошем ребре)\n",
     "\n",
     "> В любом четырёхугольнике, образованном смежными треугольниками, как минимум одна диагональ является хорошим ребром.\n",
@@ -181,20 +188,59 @@
     "Зафиксируем такой четырёхугольник $ABCD$. Пусть $AC$ и $BD$ это плохие рёбра. В окружности, описанной около $\\Delta ABC$ содержится точка $D$, так как $AC$ не удовлетворяет локальному критерию Делоне. Значит $\\angle ABC + \\angle ADC > 180°$. Аналогично показывается, что $\\angle BAD + \\angle BCD > 180°$. В итоге сумма углов четырёхугольника $ABCD$ больше $360°$, что невозможно. Значит хотя бы одна диагональ является хорошим ребром.\n",
     "</div>\n",
     "\n",
-    "$\\triangleleft$\n",
+    "$\\triangleleft$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Лемма 4 (о флипе плохого ребра)\n",
     "\n",
+    "> Флип плохого ребра уменьшает разность объёмов параболоида и триангуляции, спроецированной на него.\n",
     "\n",
-    "### Лемма 4 (о сведении флипами)\n",
+    "$\\triangleright$\n",
+    "\n",
+    "<div style=\"padding-left:27px\" >\n",
+    "\n",
+    "Рассмотрим два таких смежных треугольника, что ребро между ними является плохим. Спроецируем их на параболоид. Четыре точки, принадлежащие смежным треугольникам, при проекции на параболоид образуют тетраэдр.<br>\n",
+    "Проведём через какой-нибудь из двух треугольников плоскость. Вершина, противолежащая основанию тетраэдра, являющегося этим треугольником, лежит ниже этой плоскости (так как не выполняется локальный критерий Делоне), то есть тетраэдр лежит ниже тела, образующегося при проекции всей триангуляции на параболоид.<br>\n",
+    "После флипа станет выполняться локальный критерий Делоне, то есть тело станет включать в себя тетраэдр. Поэтому после флипа плохого ребра объём тела увеличится на объём этого тетраэдра.\n",
+    "</div>\n",
+    "\n",
+    "<img src=\"img/bad_edge.png\" style=\"float: center; margin: 10px\">\n",
+    "\n",
+    "$\\triangleleft$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Лемма 5 (о сведении флипами)\n",
     "\n",
     "> Любая триангуляция сводится к триангуляции Делоне за конечное число флипов.\n",
     "\n",
     "$\\triangleright$\n",
     "\n",
     "<div style=\"padding-left:27px\" >\n",
-    "Рассмотрим все рёбра исходной триангуляции. Их конечное число. Флипнем все плохие рёбра. По лемме 3 все получившиеся рёбра будут хорошими. В итоге все ребра нашей триангуляции будут хорошими. По эквивалентности критериев Делоне для получившейся триангуляции будет выполняться глобальный критерий Делоне, что является определением триангуляции Делоне.\n",
+    "Всего триангуляций заданного множества точек конечное число, и среди них есть триангуляция Делоне. Последовательность флипов плохих рёбер триангуляции образует такую последовательность триангуляций, что разность объёмов параболоида и спроецированной на него триангуляции убывает (по лемме 4). Эта последовательность конечна (при этом последней в последовательности является триангуляция Делоне), значит, число флипов, требуемых для достижения триангуляции Делоне, тоже конечно.\n",
     "</div>\n",
     "\n",
     "$\\triangleleft$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Предикат для проверки плохого ребра\n",
+    "\n",
+    "Из леммы 2 мы знаем, что окружность, образованная тремя точками, и плоскость, построенная по этим же точкам, спроецированных на параболоид, взаимно однозначно соотносятся. Для проверки плохого ребра воспользуемся неравенстовм $Ax+By+Cz+D<0$ и перенесем три точки, образующие треугольник и содержащие плохое ребро, и точку для проверки (в нашем случае $x, y, z$) на параболоид, после чего проверим знак предиката:\n",
+    "\n",
+    "$\\begin{vmatrix} A_x & A_y & A^2 & 1 \\\\ B_x & B_y & B^2 & 1 \\\\ C_x & C_y & C^2 & 1 \\\\ x & y & z & 1 \\end{vmatrix} < 0$\n",
+    "\n",
+    "Если это неравенство сохраняется, то, действительно, наше ребро плохое."
    ]
   }
  ],
