--- a/Triangulation_Delaunay .ipynb
+++ b/Triangulation_Delaunay .ipynb
@@ -112,9 +112,11 @@
     "\n",
     "1. Перенести все точки на параболоид \n",
     "2. Построить выпуклую оболочку\n",
-    "3. Перенести все точки и построенные ребра на плоскость\n",
+    "3. Взять от неё lower convex hull (так как нужно убрать верхние грани выпуклой оболочки)\n",
+    "4. Перенести все точки и построенные ребра на плоскость\n",
     "\n",
     "\n",
+    "<h4>***Замечание!***</h4> Для того, чтобы убрать верхние грани, перейдем в однородные координаты, и введем бесконечно удаленную точку вверх (0, 0, 1, 0) и уберем все грани, смежные с ней, так как они будут бесконечными. Этот способ удобен тем, что, когда мы рассматриваем триангуляцию Делоне на плоскости, у нас возникает вопрос $-$ что делать с точками, лежащими вне выпуклой оболочки? Тогда мы говорим, что эти точки, называемые бесконечными, попадают в бесконечные треугольники, то есть все точки выпуклой оболочки будут соединены с этой бесконечной точкой, а значит и бесконечные грани также будут с ней соединены. Стоит отметить, что предикаты поворота и предкаты для флипов будут также корректны для бесконечных точек.\n",
     "\n",
     "### Теорема о существовании триангуляции Делоне\n",
     "\n",
@@ -124,14 +126,21 @@
     "\n",
     "$\\triangleright$\n",
     "<div style=\"padding-left:27px\">\n",
-    "Все грани выпуклой оболочки окажутся внутри параболоида из-за его выпуклости. При этом точки лежат на параболоиде. Поэтому не найдётся точек, которые будут лежать за гранями выпуклой оболочки. То есть все точки, спроецированные на параболоид, будут принадлежать выпуклой оболочке. Внутри окружностей, описанных вокруг проекций треугольников выпуклой оболочки, не будет лежать никаких точек по лемме 4. Значит, для проекций треугольников выполнен критерий Делоне. Из этого следует, что получившаяся триангуляция есть триангуляция Делоне.\n",
+    "Все грани выпуклой оболочки окажутся внутри параболоида из-за его выпуклости. При этом точки лежат на параболоиде. Поэтому не найдётся точек, которые будут лежать за гранями выпуклой оболочки. То есть все точки, спроецированные на параболоид, будут принадлежать выпуклой оболочке. Внутри окружностей, описанных вокруг проекций треугольников выпуклой оболочки, не будет лежать никаких точек по лемме 2. Значит, для проекций треугольников выполнен критерий Делоне. Из этого следует, что получившаяся триангуляция есть триангуляция Делоне.\n",
     "</div>\n",
     "$\\triangleleft$\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Запустите код для загрузки видео, показывающее наглядный пример построения Триангуляции Делоне."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -192,19 +201,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Предикат для проверки плохого ребра\n",
+    "### Предикат для флипа\n",
     "\n",
     "Из леммы 2 мы знаем, что окружность, образованная тремя точками, и плоскость, построенная по этим же точкам, спроецированных на параболоид, взаимно однозначно соотносятся. Для проверки плохого ребра воспользуемся неравенстовм $Ax+By+Cz+D<0$ и перенесем три точки, образующие треугольник и содержащие плохое ребро, и точку для проверки (в нашем случае $x, y, z$) на параболоид, после чего проверим знак предиката:\n",
     "\n",
     "$\\begin{vmatrix} A_x & A_y & A_x^2 + A_y^2 & 1 \\\\ B_x & B_y & B_x^2 + B_y^2 & 1 \\\\ C_x & C_y & C_x^2 + C_y^2 & 1 \\\\ x & y & x^2 + y^2 & 1 \\end{vmatrix} \\ge 0$\n",
     "\n",
-    "Если это неравенство сохраняется, то, действительно, наше ребро плохое."
+    "Если это неравенство сохраняется, то, действительно, наше ребро плохое и его нужно флипнуть."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Предикат для флипа в бесконечных гранях\n",
+    "\n",
+    "Напомним, что точки, лежащие вне выпуклой оболочки, называются бесконечными, обладают координатами (0, 0, 1, 0) и лежат в бесконечных гранях. Тогда проверка на то, является ли хорошим ребро, инцидентное бесконечно удалённой точке, упрощается: \n",
+    "\n",
+    "$\\begin{vmatrix} A_x & A_y & A_x^2 + A_y^2 & 1 \\\\ B_x & B_y & B_x^2 + B_y^2 & 1 \\\\ C_x & C_y & C_x^2 + C_y^2 & 1 \\\\ 0 & 0 & 1 & 0 \\end{vmatrix} = \\begin{vmatrix} A_x & A_y & 1 \\\\ B_x & B_y & 1 \\\\ C_x & C_y & 1 \\end{vmatrix}$\n",
+    "\n",
+    "То есть достаточно проверить поворот трёх остальных точек образованного двумя бесконечными треугольниками четырёхугольника."
+   ]
   },
   {
    "cell_type": "markdown",
