--- a/Triangulation_Delaunay .ipynb
+++ b/Triangulation_Delaunay .ipynb
@@ -2,14 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Триангуляция Делоне"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Содержание\n",
     "\n",
@@ -22,7 +30,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "source": [
     "<a id=\"def\"></a>\n",
@@ -41,7 +52,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "<center>Пример триангуляции Делоне.</center>\n",
     "\n",
@@ -50,7 +65,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Докажем равносильность данных критериев:\n",
     "\n",
@@ -63,15 +82,15 @@
     "$\\triangleright$\n",
     "\n",
     "<div style=\"padding-left:27px\">\n",
-    "В одну строну очевидно.<br>\n",
+    "В одну сторону очевидно.<br>\n",
     "Докажем в обратную сторону. Пусть для некоторого треугольника выполнен локальный, но не выполнен глобальный критерий. Т.е. существует точка $E$ такая, что лежит внутри описанной окружности и не имеет рёбер с вершинами треугольника. Зафиксируем эту точку и из всех таких треугольников рассмотрим тот, у которого $\\angle BEC$ максимален, если $BC$ $-$ ближайшая к точке $E$ сторона. Пусть с таким $\\Delta ABC$ соседствует $\\Delta BCD$.\n",
     "</div>\n",
     "<img src=\"img/Bad_triangle.png\" style=\"float: right; margin: 10px\">\n",
     "<div style=\"padding-left:27px\">\n",
-    "Точка $E$ не может лежать внутри $\\Delta BCD$, так как в этом случае имелись бы рёбра $EB$ и $EC$, и нарушался бы локальный критерий. Значит, она снаружи. Не уменьшая общности, будем считать, что $BD$ $-$ ближайшая к $E$ сторона $\\Delta BCD$. Тогда выполнено, что $\\angle BAC + \\angle BEC > 180°, \\angle BAC + \\angle BDC < 180°$. Если т.$E$ лежит вне окружности, описанной около $\\Delta BCD$, то $\\angle BEC < \\angle BDC$, что противоречит неравенствам выше. Значит, для $\\Delta BCD$ также нарушается глобальный критерий. Из вышесказанного следует, что $\\angle BED > \\angle BEC$, где $BD$ $-$ ближайшая к $E$ сторона. \n",
+    "Точка $E$ не может лежать внутри $\\Delta BCD$, так как в этом случае имелись бы рёбра $EB$ и $EC$, и нарушался бы локальный критерий. Значит, она снаружи. Не уменьшая общности, будем считать, что $BD$ $-$ ближайшая к $E$ сторона $\\Delta BCD$. Тогда выполнено, что $\\angle BAC + \\angle BEC > 180°, \\angle BAC + \\angle BDC < 180°$. Если точка $E$ лежит вне окружности, описанной около $\\Delta BCD$, то $\\angle BEC < \\angle BDC$, что противоречит неравенствам выше. Значит, для $\\Delta BCD$ также нарушается глобальный критерий. Из вышесказанного следует, что $\\angle BED > \\angle BEC$, где $BD$ $-$ ближайшая к $E$ сторона. \n",
     "</div>\n",
     "<div style=\"padding-left:27px\">\n",
-    "Очевидно, что угол $BED$ больше, чем угол $BEC$. При этом точка $E$ лежит в окружности, описанной вокруг $BDC$. Значит, при выборе треугольника нужно было взять не $ABC$, а $BDC$. Противоречие.\n",
+    "Очевидно, что $\\angle BED$ больше, чем $\\angle BEC$. При этом точка $E$ лежит в окружности, описанной вокруг $\\Delta BDC$. Значит, при выборе треугольника нужно было взять не $\\Delta ABC$, а $\\Delta BDC$. Противоречие.\n",
     "</div>\n",
     "\n",
     "$\\triangleleft$"
@@ -79,7 +98,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "<a id=\"theorem\"></a>\n",
     "## Существование триангуляции Делоне и её построение\n",
@@ -95,7 +118,7 @@
     "<div style=\"padding-left:27px\">\n",
     "Любая окружность в $R^2$ описывается уравнением $(x-a)^2+(y-b)^2=r^2$, где $(a, b)$ $-$ центр окружности, $r$ $-$ её радиус. \n",
     "Раскрываем скобки: $x^2-2ax+a^2+y^2-2by+b^2-r^2=0$.\n",
-    "Подставляем в уравнение параболоида $(x^2+y^2=z)$: $(-2a)x+(-2b)y+(-1)z+(a^2+b^2-r^2)=0$.\n",
+    "Подставляем в уравнение параболоида $(x^2+y^2=z)$: $(-2a)x+(-2b)y+z+(a^2+b^2-r^2)=0$.\n",
     "Получившееся уравнение является уравнением плоскости: $Ax+By+Cz+D=0$.\n",
     "Это значит, что все точки, лежащие на одной окружности, при проецировании на параболоид будут лежать в одной плоскости.\n",
     "</div>\n",
@@ -172,7 +195,7 @@
     "\n",
     "> **Флип (flip)** $-$ это замена одной диагонали на другую в четырёхугольнике, образованном смежными треугольниками.\n",
     "\n",
-    "<center><img src=\"img/flipm.gif\"></center> \n",
+    "<center><img src=\"img/flipm.png\"></center> \n",
     "\n",
     "Будем называть ребро **хорошим**, если для него выполнен локальный критерий Делоне, и **плохим** в обратном случае.\n",
     "Необходимо показать, что любая триангуляция сводится к триангуляции Делоне за конечное число флипов. Для этого докажем несколько лемм:\n"
@@ -220,7 +243,11 @@
     "\n",
     "$\\begin{vmatrix} A_x & A_y & A_x^2 + A_y^2 & 1 \\\\ B_x & B_y & B_x^2 + B_y^2 & 1 \\\\ C_x & C_y & C_x^2 + C_y^2 & 1 \\\\ 0 & 0 & 1 & 0 \\end{vmatrix} = \\begin{vmatrix} A_x & A_y & 1 \\\\ B_x & B_y & 1 \\\\ C_x & C_y & 1 \\end{vmatrix}$\n",
     "\n",
-    "То есть достаточно проверить поворот трёх остальных точек образованного двумя бесконечными треугольниками четырёхугольника."
+    "То есть достаточно проверить поворот трёх остальных точек образованного двумя бесконечными треугольниками четырёхугольника.\n",
+    "\n",
+    "<b>Замечание!</b>\n",
+    "<img src=\"img/inf.png\" style=\"float: right;height: 200px; margin: 10px\">\n",
+    "Стоит отметить, что предикат для флипа в бесконечных гранях фактически задает выпуклую оболочку. Например, на рисунке видно, что точка $B$ не принадлежит выпуклой оболочке, и это действительно можно проверить предикатом (ребро $AC$ будет хорошим)."
    ]
   },
   {
@@ -229,15 +256,15 @@
    "source": [
     "### Лемма 4 (о флипе плохого ребра)\n",
     "\n",
-    "> Флип плохого ребра уменьшает разность объёмов параболоида и триангуляции, спроецированной на него.\n",
+    "> Флип плохого ребра увеличивает объем многогранника.\n",
     "\n",
     "$\\triangleright$\n",
     "\n",
     "<div style=\"padding-left:27px\" >\n",
     "\n",
     "Рассмотрим два таких смежных треугольника, что ребро между ними является плохим. Спроецируем их на параболоид. Четыре точки, принадлежащие смежным треугольникам, при проекции на параболоид образуют тетраэдр.<br>\n",
-    "Проведём через какой-нибудь из двух треугольников плоскость. Вершина, противолежащая основанию тетраэдра, являющегося этим треугольником, лежит ниже этой плоскости (так как не выполняется локальный критерий Делоне), то есть тетраэдр лежит ниже тела, образующегося при проекции всей триангуляции на параболоид.<br>\n",
-    "После флипа станет выполняться локальный критерий Делоне, то есть тело станет включать в себя тетраэдр. Поэтому после флипа плохого ребра объём тела увеличится на объём этого тетраэдра.\n",
+    "Проведём через какой-нибудь из двух треугольников плоскость. Вершина, противолежащая основанию тетраэдра, являющегося этим треугольником, лежит ниже этой плоскости (так как не выполняется локальный критерий Делоне), то есть тетраэдр лежит ниже многогранника, образующегося при проекции всей триангуляции на параболоид.<br>\n",
+    "После флипа станет выполняться локальный критерий Делоне, то есть многогранник станет включать в себя тетраэдр. Поэтому после флипа плохого ребра объём многогранника увеличится на объём этого тетраэдра.\n",
     "</div>\n",
     "\n",
     "<img src=\"img/bad_edge.png\" style=\"float: center; margin: 10px\">\n",
@@ -256,7 +283,7 @@
     "$\\triangleright$\n",
     "\n",
     "<div style=\"padding-left:27px\" >\n",
-    "Всего триангуляций заданного множества точек конечное число, и среди них есть триангуляция Делоне. Последовательность флипов плохих рёбер триангуляции образует такую последовательность триангуляций, что разность объёмов параболоида и спроецированной на него триангуляции убывает (по лемме 4). Эта последовательность конечна (при этом последней в последовательности является триангуляция Делоне), значит, число флипов, требуемых для достижения триангуляции Делоне, тоже конечно.\n",
+    "Всего триангуляций заданного множества точек конечное число, и среди них есть триангуляция Делоне. Последовательность флипов плохих рёбер триангуляции образует такую последовательность триангуляций, что объем многогранника может только увеличиваться (по лемме 4). Эта последовательность конечна (при этом последней в последовательности является триангуляция Делоне), значит, число флипов, требуемых для достижения триангуляции Делоне, тоже конечно.\n",
     "</div>\n",
     "\n",
     "$\\triangleleft$"
